--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^9.0.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
@@ -56,12 +57,17 @@
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.9.0",
+    "react-loader-spinner": "^3.1.2",
+    "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.0.1",
+    "react-slick": "^0.25.2",
     "react-toastify": "^5.3.2",
+    "reactjs-popup": "^1.4.2",
     "reactstrap": "^8.0.1",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
+    "slick-carousel": "^1.8.1",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.3",
     "ts-pnp": "1.1.2",
