--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.17.1",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
+    "google-maps-react": "^2.0.2",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
