--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.9.0",
+    "react-image-gallery": "^0.9.1",
     "react-loader-spinner": "^3.1.2",
+    "react-photo-gallery": "^8.0.0",
     "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.0.1",
     "react-slick": "^0.25.2",
